# ClientServerTCP

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt
Client/src/: client.cpp
Server/: CMakeLists.txt
Server/src/: server.cpp
include/: Cache.hpp  CustomSerializ.hpp  TcpPackage.hpp  customSerialization.hpp  global.hpp
